<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    tools:context="com.example.android.project1ui.MainActivity"
    style="@style/scrollview">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/hesblogo"/>
        <TextView
            style="@style/header"
            android:text="@string/about"
            />
        <LinearLayout
            style="@style/linearHorizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                style="@style/text"
                android:paddingLeft="@dimen/padding"
                android:text="@string/abt"
                />
            <ImageView
                style="@style/img"
                android:src="@drawable/food"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/marginBottom"
                />
        </LinearLayout>
        <TextView
            style="@style/header"
            android:text="@string/contact"
            />
        <LinearLayout
            style="@style/linearHorizontal">
            <ImageView
                style="@style/img"
                android:src="@drawable/address"/>
            <TextView
                android:text="@string/address"
                style="@style/text"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/linearHorizontal">
            <ImageView
                style="@style/img"
                android:src="@drawable/phone"/>
            <TextView
                style="@style/text"
                android:text="@string/phone"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/linearHorizontal">
            <ImageView
                style="@style/img"
                android:src="@drawable/email2"/>
            <TextView
                style="@style/text"
                android:text="@string/email"
                />
        </LinearLayout>
        <TextView
            style="@style/header"
            android:text="@string/whours"
            />
        <LinearLayout
            style="@style/linearHorizontal">
            <ImageView
                style="@style/img"
                android:src="@drawable/clock"/>
            <TextView
                style="@style/text"
                android:text="@string/whrs"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
